@@ -1,3 +1,9 @@
+2001-09-23  Mikael Djurfeldt  <mdj@linnaeus>
+
+	* validate.h (SCM_NUM2FLOAT, SCM_NUM2DOUBLE,
+	SCM_VALIDATE_FLOAT_COPY, SCM_VALIDATE_DOUBLE_COPY): New
+	macros. (The NUM names might soon change.)
+
 2001-09-22  Rob Browning  <rlb@defaultvalue.org>
 
 	* numbers.h
